--- a/src/pages/SofteWareDeals/SoftWareDeals.module.scss
+++ b/src/pages/SofteWareDeals/SoftWareDeals.module.scss
@@ -4,6 +4,7 @@
 }
 
 .inner {
+    width: 100%;
     height: 100%;
 }
 
@@ -20,10 +21,20 @@
     }
 
     .session-body {
+        padding: 0 16px;
         width: 100%;
         display: flex;
         justify-content: center;
         transform: translateY(-50px);
+
+        &.tb,
+        &.mb {
+            .session-buy {
+                height: 36px;
+                bottom: 8px;
+                padding: 0;
+            }
+        }
 
         .session-row {
             width: 1170px;
@@ -118,4 +129,232 @@
 }
 
 .region {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+
+    .region-background {
+        position: relative;
+        min-height: 570px;
+        img {
+            width: 100%;
+            object-fit: cover;
+            transform: scale(1.264) translateY(47px);
+        }
+        .region-header {
+            &.mb {
+                justify-content: start;
+                text-align: center;
+            }
+
+            padding-top: 43px;
+            flex-direction: column;
+            width: 100%;
+            height: 322px;
+            top: 0;
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 1rem;
+
+            .region-title {
+                font-size: 4.4rem;
+                color: white;
+                font-weight: bold;
+                margin-bottom: 7px;
+            }
+
+            .region-content {
+                font-size: 1.4rem;
+                color: white;
+                font-weight: 400;
+            }
+        }
+    }
+
+    .region-body {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: -260px;
+        z-index: 50;
+
+        .region-products {
+            width: 1170px;
+            display: flex;
+            gap: 3rem;
+            flex-wrap: wrap;
+            justify-content: center;
+            cursor: pointer;
+            user-select: none;
+            .region-item {
+                &.tb,
+                &.mb {
+                    width: 100%;
+                }
+
+                width: 370px;
+                display: flex;
+                flex-direction: column;
+                .regionItem-img {
+                    img {
+                        width: 100%;
+                        border-radius: 4px;
+                    }
+                }
+
+                .regionItem-name {
+                    font-size: 1.6rem;
+                    color: #212121;
+                    font-weight: bold;
+                    margin: 27px 0 18.5px 0;
+                    display: flex;
+                    letter-spacing: -0.3px;
+                }
+
+                .regionItem-content {
+                    display: flex;
+                    font-size: 1.4rem;
+                    color: #757575;
+                    line-height: 2rem;
+                    margin-bottom: 15px;
+                    height: 60px;
+                }
+
+                .regionItem-btn {
+                    display: inline-block;
+                    border-radius: 3px;
+                    font-weight: bold;
+                    text-decoration: none;
+                    font-size: 14px;
+                    width: 93.34px;
+                    line-height: 42px;
+                    padding: 0px 20px;
+                    color: rgb(255, 255, 255);
+                    background-color: rgb(47, 130, 251);
+                    margin-bottom: 10px;
+                    cursor: pointer;
+
+                    &:hover {
+                        background-color: rgb(85, 150, 247);
+                    }
+                }
+            }
+        }
+    }
+}
+
+.security {
+    margin-top: 135px;
+    position: relative;
+    min-height: 650px;
+
+    &.tb {
+        height: 850px;
+    }
+    &.mb {
+        height: 1550px;
+    }
+
+    .security-background {
+        width: 100%;
+        img {
+            width: 100%;
+            transform: scale(1.264) translateY(49px);
+        }
+    }
+
+    .security-body {
+        &.tb,
+        &.mb {
+            .security-box {
+                flex-direction: column;
+                align-items: center;
+
+                .security-info {
+                    width: 100%;
+                    text-align: center;
+                    margin-top: 60px;
+                }
+
+                .security-products {
+                    width: 100%;
+                    justify-content: center;
+                }
+            }
+        }
+
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        position: absolute;
+        z-index: 10;
+        top: 0;
+
+        .security-box {
+            width: 1170px;
+            gap: 3rem;
+            display: flex;
+            justify-content: space-between;
+
+            .security-info {
+                width: 38.462%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+                padding-bottom: 37px;
+                .security-name {
+                    font-size: 4.4rem;
+                    color: #000000de;
+                    font-weight: bold;
+                    margin-bottom: 17px;
+                }
+
+                .security-content {
+                    font-size: 1.4rem;
+                    color: #000000de;
+                }
+            }
+
+            .security-products {
+                display: flex;
+                justify-content: flex-end;
+                width: 690px;
+                z-index: 10;
+                gap: 3rem;
+                flex-wrap: wrap;
+                transform: translateY(-40px);
+                .securityProduct-img {
+                    position: relative;
+                    img {
+                        border-radius: 4px;
+                    }
+                    .security-btn {
+                        position: absolute;
+                        bottom: 0;
+                        right: 10px;
+                        display: inline-block;
+                        border-radius: 3px;
+                        font-weight: bold;
+                        text-decoration: none;
+                        font-size: 14px;
+                        line-height: 42px;
+                        padding: 0px 20px;
+                        color: rgb(255, 255, 255);
+                        background-color: rgb(47, 130, 251);
+                        margin-bottom: 10px;
+
+                        cursor: pointer;
+
+                        &:hover {
+                            background-color: rgb(85, 153, 255);
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
