--- a/src/admin/pages/AdminEditProduct/AdminEditProduct.module.scss
+++ b/src/admin/pages/AdminEditProduct/AdminEditProduct.module.scss
@@ -35,22 +35,28 @@
 .keys-add {
     width: 100%;
     display: flex;
-    position: relative;
+    background: white;
+    font-size: 3rem;
+    color: black;
+    align-items: center;
+    border-radius: 4px;
+    overflow: hidden;
+    border: 1px solid #ccc;
 
     .keys-btn {
-        right: 0;
+        width: 100px;
         height: 100%;
         font-size: 1.4rem;
         font-weight: bold;
         display: flex;
         align-items: center;
-        position: absolute;
+        justify-content: center;
         cursor: pointer;
         background-color: #ccc;
-        padding: 10px;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
         transition: all linear 0.2s;
+        user-select: none;
 
         &:hover {
             background-color: #e5e4e4;
@@ -60,14 +66,26 @@
 
 .keys-box {
     width: 100%;
-    max-height: 150px;
+    max-height: 180px;
     display: flex;
     flex-direction: column;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: white;
-    padding: 10px;
     overflow-y: auto;
+    user-select: none;
+    position: relative;
+    padding: 30px 10px;
+}
+
+.keys-total {
+    position: absolute;
+    top: 0;
+    font-size: 1.4rem;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 }
 
 .keys-item {
@@ -76,7 +94,13 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ccc;
+    padding-top: 10px;
     padding-bottom: 10px;
+}
+
+.key-input {
+    width: 100%;
+    padding-left: 12px;
 }
 
 .keys-quantity {
