--- a/src/pages/Plus/Plus.module.scss
+++ b/src/pages/Plus/Plus.module.scss
@@ -1,124 +1,283 @@
 .wrapper {
     width: 100%;
+    user-select: none;
 }
 
 .inner {
     width: 100%;
-
-    &.tb,
-    &.mb {
-        .poster {
-            .poster-box {
-                flex-direction: column;
-                max-height: max-content;
-
-                .poster-introduce {
-                    width: 100%;
-                    align-items: center;
-                }
-
-                .poster-cost {
-                    width: 100%;
-                    align-items: center;
-                    gap: 3rem;
-                }
-            }
-        }
-    }
-}
-
-.poster {
-    width: 100%;
-    background-color: #6202ea;
     display: flex;
-    justify-content: center;
-
-    .poster-box {
-        max-height: 176px;
-        width: 1170px;
-        display: flex;
-
-        .poster-img {
-            img {
-                width: 100%;
-                object-fit: cover;
-            }
-        }
-
-        .poster-introduce {
-            width: 25.812%;
-            display: flex;
-            flex-direction: column;
-            padding-top: 27px;
-            padding-bottom: 30px;
-            color: white;
-            font-weight: bold;
-            justify-content: space-between;
-
-            .poster-title {
-                font-size: 34px;
-                line-height: 40px;
-            }
-
-            .poster-content {
-                font-size: 1.4rem;
-                line-height: 20px;
-            }
-        }
-
-        .poster-cost {
-            padding-top: 25.5px;
-            padding-bottom: 27px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-
-            .poster-price {
-                color: white;
-                display: flex;
-                flex-direction: column;
-
-                .price-main {
-                    height: 38px;
-                    font-weight: bold;
-                    font-size: 32px;
-                    line-height: 40px;
-                }
-
-                .price-old {
-                    margin-top: 1px;
-                    height: 14px;
-                    font-size: 1.2rem;
-                    text-decoration: line-through;
-                }
-            }
-
-            .poster-btn {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                width: 217px;
-                height: 42.4px;
-                border-radius: 3px;
-                font-size: 1.4rem;
-                font-weight: bold;
-                color: black;
-                background-color: rgb(255, 255, 255);
-                cursor: pointer;
-            }
-        }
-    }
+    flex-direction: column;
 }
 
-.session {
+.section {
     width: 100%;
+    height: 632px;
+    position: relative;
+    background: black;
 
-    .session-bg {
+    .section-bg {
         display: flex;
+        width: 100%;
+        padding-top: 102.81px;
 
         img {
             width: 100%;
-            object-fit: cover;
+            transform: scale(1.2632);
         }
     }
+
+    .section-body {
+        padding: 0 16px;
+        width: 100%;
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        z-index: 20;
+        top: 0;
+        padding-top: 109px;
+
+        .section-row {
+            width: 1170px;
+            display: flex;
+            justify-content: space-between;
+            .section-left {
+                width: 501px;
+                display: flex;
+                flex-direction: column;
+
+                .sectionLeft-title {
+                    margin-top: 23px;
+                    font-size: 50px;
+                    font-weight: 500;
+                    line-height: 60px;
+                    color: white;
+                    margin-bottom: 26px;
+                }
+
+                .sectionLeft-item {
+                    color: white;
+                    display: flex;
+                    align-items: center;
+                    font-size: 1.8rem;
+                    font-weight: 500;
+                    gap: 2rem;
+                    margin-bottom: 31px;
+                    height: 24.4px;
+
+                    span {
+                        transform: translateY(-4px);
+                    }
+                }
+            }
+
+            .section-right {
+                width: 616px;
+                padding-top: 6px;
+                display: flex;
+                gap: 4rem;
+
+                .sectionRight-Box {
+                    border: 1px solid rgb(117, 117, 117);
+                    border-radius: 5px;
+                    width: 268px;
+                    height: 330px;
+                    padding: 2px;
+                    background-color: rgb(0, 0, 0);
+                    display: flex;
+                    flex-direction: column;
+                    -webkit-box-align: center;
+                    align-items: center;
+                    flex-direction: column;
+
+                    &.active {
+                        border: 2px solid rgb(253, 200, 74);
+
+                        .sectionRightBox-detail {
+                            padding-left: 25px;
+                            padding-right: 24.5px;
+                        }
+                    }
+
+                    .sectionRightBox-present {
+                        display: flex;
+                        width: 100%;
+                        margin-top: -2px;
+                        margin-left: -4px;
+                        margin-bottom: 18.5px;
+
+                        span {
+                            display: block;
+                            width: 50%;
+                            color: black;
+                            text-transform: uppercase;
+                            font-size: 14px;
+                            line-height: 27px;
+                            background: rgb(253, 200, 74);
+                            width: 132.4px;
+                            clip-path: polygon(0px 0px, 100% 0px, 95% 100%, 0% 100%);
+                            padding-left: 27px;
+                        }
+
+                        p {
+                            display: block;
+                            font-size: 14px;
+                            line-height: 27px;
+                            font-weight: normal;
+                            color: rgb(253, 200, 74);
+                            padding-left: 23px;
+                        }
+                    }
+
+                    .sectionRightBox-header {
+                        font-size: 1.2rem;
+                        color: #757575;
+                        height: 14px;
+                        display: flex;
+                        margin-top: 29.6px;
+                    }
+
+                    .sectionRightBox-name {
+                        margin-top: 31.5px;
+                        text-align: center;
+                        font-size: 18px;
+                        line-height: 21px;
+                        color: rgb(189, 151, 244);
+                        font-weight: bold;
+                    }
+
+                    .sectionRightBox-price {
+                        color: white;
+                        display: flex;
+                        margin-top: 13.5px;
+                        position: relative;
+
+                        sup {
+                            font-size: 1.2rem;
+                            font-weight: bold;
+                            transform: translateY(13px);
+                        }
+
+                        span {
+                            font-size: 3.2rem;
+                            font-weight: bold;
+                            margin: 0 5px;
+                            display: flex;
+                            align-items: end;
+                            transform: translateY(5px);
+                        }
+
+                        p {
+                            font-size: 1.2rem;
+                            font-weight: bold;
+                            display: flex;
+                            align-items: end;
+                            height: 100%;
+                        }
+
+                        text {
+                            position: absolute;
+                            bottom: -21.5px;
+                            right: 0;
+                            font-size: 1.2rem;
+                            color: #757575;
+                        }
+                    }
+
+                    .sectionRightBox-detail {
+                        width: 100%;
+                        margin-top: 32.5px;
+                        width: 100%;
+                        padding-left: 26px;
+                        padding-right: 25.5px;
+
+                        .sectionRightBox-list {
+                            width: 100%;
+                            border-top: 1px solid rgb(117, 117, 117);
+                            padding-top: 15px;
+
+                            .sectionRightBox-item {
+                                color: #757575;
+                                font-size: 1.2rem;
+                                gap: 1rem;
+                                display: flex;
+                                margin-bottom: 9.8px;
+
+                                img {
+                                    width: 14px;
+                                    height: 10.53px;
+                                }
+
+                                span {
+                                    transform: translateY(-1px);
+                                }
+                            }
+                        }
+                    }
+
+                    .sectionRightBox-btn {
+                        background: rgb(98, 2, 234);
+                        color: rgb(255, 255, 255);
+                        border: 1px solid rgb(98, 2, 234);
+                        border-radius: 3px;
+                        min-width: 216px;
+                        height: 42px;
+                        font-size: 14px;
+                        line-height: 16px;
+                        font-weight: 600;
+                        cursor: pointer;
+                        position: absolute;
+                        bottom: 43px;
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        font-family: Arial;
+                    }
+                }
+            }
+        }
+    }
+
+    .section-privacy {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: 32px;
+        .sectionPrivacy-col {
+            width: 1170px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            div {
+                transform: translateX(24px);
+                display: flex;
+                flex-direction: column;
+                width: 660px;
+                align-items: center;
+                span {
+                    z-index: 20;
+                    font-size: 1.2rem;
+                    color: #757575;
+                    text-align: center;
+                    display: flex;
+                    line-height: 20px;
+                }
+
+                p {
+                    display: flex;
+                    text-align: center;
+                    z-index: 20;
+                    font-size: 1.2rem;
+                    color: #757575;
+                    line-height: 20px;
+                    a {
+                        color: #2f82fb;
+                        margin-left: 2px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.members {
 }
