--- a/src/components/Auth/Auth.module.scss
+++ b/src/components/Auth/Auth.module.scss
@@ -176,7 +176,7 @@
     box-shadow: rgba(0, 0, 0, 0.2) 0px 6px 16px;
     border-radius: 4px;
     position: relative;
-    padding: 20.4px 20px 20px 20.4px;
+    padding: 20.4px 0 20px 0;
 
     &:after {
         content: '';
@@ -194,6 +194,32 @@
 
     .info {
         display: flex;
+        padding: 0 20px 0 20.4px;
+        width: 100%;
+    }
+
+    .tools {
+        display: flex;
+        flex-direction: column;
+        padding: 10px 0;
+        border-top: 1px solid #ccc;
+        margin-top: 16px;
+
+        .tools-item {
+            width: 100%;
+            gap: 1rem;
+            display: flex;
+            align-items: center;
+            font-size: 1.2rem;
+            color: #212121;
+            height: 37px;
+            padding: 0 20px 0 20.4px;
+
+            &:hover {
+                cursor: pointer;
+                background-color: rgba(157, 157, 157, 0.6);
+            }
+        }
     }
 
     .avatar {
@@ -262,10 +288,9 @@
     align-items: center;
     height: 50px;
     justify-content: space-between;
-    margin-top: 10px;
     flex-shrink: 0;
-    padding: 15px 0 0 0;
     border-top: 1px solid #ccc;
+    padding: 15px 20px 0 20.4px;
 
     .setting {
         display: flex;
@@ -297,5 +322,29 @@
         font-size: 1.2rem;
         color: #212121;
         margin-right: 18.8px;
+    }
+}
+
+.loadingApi {
+    background-color: #848484;
+    min-height: 20px;
+    border-radius: 4px;
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+        content: '';
+        position: absolute;
+        background: linear-gradient(to right, transparent, #c5c5c5, transparent);
+        width: 100%;
+        height: 100%;
+        transform: translateX(-100%);
+        animation: loadingApi 1.4s infinite;
+    }
+}
+
+@keyframes loadingApi {
+    100% {
+        transform: translateX(100%);
     }
 }
