--- a/src/pages/Payment/Payment.module.scss
+++ b/src/pages/Payment/Payment.module.scss
@@ -1,7 +1,8 @@
 .wrapper {
     width: 100%;
-    min-height: 1000px;
     background-color: #f9f9f9;
+    height: 100vh;
+    user-select: none;
 }
 
 .inner {
@@ -65,10 +66,10 @@
     display: flex;
     justify-content: center;
     padding-top: 40px;
+    padding: 40px 16px 0 16px;
 
     .body-box {
-        width: 1170px;
-        padding: 0 125px;
+        width: 920px;
         display: flex;
         flex-direction: column;
 
@@ -91,6 +92,11 @@
                 border: 1px solid rgb(224, 224, 224);
                 border-radius: 4px;
                 padding: 19px;
+
+                &.tb,
+                &.mb {
+                    width: 100%;
+                }
 
                 .payments-header {
                     display: flex;
@@ -231,6 +237,15 @@
                 border-radius: 4px;
                 display: flex;
                 flex-direction: column;
+
+                &.tb,
+                &.mb {
+                    position: fixed;
+                    bottom: 0;
+                    left: 0;
+                    right: 0;
+                    width: 100%;
+                }
 
                 .pay-products {
                     display: flex;
@@ -395,6 +410,97 @@
                         }
                     }
                 }
+            }
+        }
+    }
+}
+
+.pay-alert {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+
+    &.active {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    .payAlert-overlay {
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 100%;
+        cursor: pointer;
+    }
+
+    .payAlert-box {
+        position: absolute;
+        width: 300px;
+        height: 300px;
+        border-radius: 4px;
+        z-index: 10;
+        background: #f9f9f9;
+        transition: all linear 0.2s;
+        transform: scale(0.7);
+        opacity: 0;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &.active {
+            transform: scale(1);
+            opacity: 1;
+        }
+
+        span {
+            font-size: 2.6rem;
+            color: black;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        img {
+            display: flex;
+            align-self: center;
+            max-width: 200px;
+            height: 100%;
+            max-height: 40px;
+        }
+
+        .payAlert-btn {
+            margin-top: 21px;
+            font-size: 1.8rem;
+            font-weight: 400;
+            border-radius: 3px;
+            font-weight: bold;
+            height: 42.4px;
+            width: 100%;
+            background-color: rgb(47, 130, 251);
+            color: rgb(255, 255, 255);
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all linear 0.2s;
+
+            &.disable {
+                background-color: rgb(128, 128, 128);
+
+                &:hover {
+                    background-color: rgb(128, 128, 128);
+                }
+            }
+
+            &:hover {
+                background-color: rgb(88, 150, 243);
             }
         }
     }
