--- a/src/pages/Orders/Orders.module.scss
+++ b/src/pages/Orders/Orders.module.scss
@@ -1,22 +1,50 @@
 .wrapper {
     width: 100%;
     height: 1000vh;
+    background-color: #f9f9f9;
 }
 
 .inner {
     width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .header {
     width: 100%;
-    height: 80px;
+    height: 81px;
     background-color: black;
     display: flex;
     align-items: center;
     padding: 0 20px;
     justify-content: space-between;
+    position: fixed;
+    z-index: 2000;
 
     .header-logo {
         margin-left: 60px;
+    }
+}
+
+.body {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding-top: 81px;
+
+    .body-side {
+        width: 80px;
+        height: 100%;
+        background-color: black;
+        flex-shrink: 0;
+    }
+
+    .body-main {
+        display: flex;
+        justify-content: center;
+        flex: 1;
+        padding: 0 10px;
+        background-color: #f9f9f9;
     }
 }
