--- a/src/components/ClientKeys/ClientKeys.module.scss
+++ b/src/components/ClientKeys/ClientKeys.module.scss
@@ -5,7 +5,7 @@
 }
 
 .inner {
-    width: 1170px;
+    width: 100%;
     padding-top: 41.5px;
 
     .header {
@@ -101,13 +101,14 @@
             font-size: 1.6rem;
             border: 1px solid #ccc;
             border-top: none;
+            flex-wrap: wrap;
 
             &:first-child {
                 border-top: 1px solid #ccc;
             }
 
             .item-title {
-                width: 25%;
+                width: 20%;
                 display: flex;
                 height: 50px;
                 align-items: center;
